--- a/src/app/product/product-list.component.html
+++ b/src/app/product/product-list.component.html
@@ -5,7 +5,7 @@
     <div class="panel-body">
         <!--division for panel body-->
         <div class="table-responsive">
-            <!--division for table responsive-->
+            <!--division for table1 responsive-->
             
             <button  (click)="loadProduct()"  >Get Info</button>
           
